# BRS

./: .gitignore  pyproject.toml
brs/: config.py  logging_config.py  main.py
brs/analysis/: __init__.py  analysis.py  bar_chart.py  box_plot.py  hist_inspector.py  na_inspection.py  pie_chart.py
brs/feature_engineering/: __init__.py  feature_engineering.py
brs/feature_engineering/books_transformations/: elderity_fe.py  popularity_fe.py  rating_fe.py
brs/feature_engineering/users_transformations/: age_fe.py  country_fe.py  mean_rating_fe.py  num_ratings_fe.py
brs/ingestion/: __init__.py  google_books_enrichment.py  kaggle_download.py  load_dataset.py  load_kaggle.py  load_local.py
brs/metrics/: __init__.py  metrics.py  recsys_metics.py  regression_metrics.py
brs/models/: model.py
brs/models/rate_prediction/baseline/: model.py  notebook.ipynb  pipeline.py
brs/models/rate_prediction/lin_reg/: pipeline.py
brs/preprocessing/: __init__.py  books_preprocessing.py  clearify_preprocessing.py  csv_to_parquet.py  preprocessing.py  users_preprocessing.py
brs/preprocessing/raw_dataset_preprocessing/: __init__.py  books_preprocessing.py  users_preprocessing.py
brs/scripts/: run_dataset_enrichment.py
notebooks/: eda.ipynb
spark&miniio/: docker-compose.yml
spark&minio/: README.md  core-site.xml  docker-compose-spark.yml  docker-compose.yml  dockerfile.spark.new  spark-defaults.conf
spark&minio/minio_data/.minio.sys/: format.json
spark&minio/spark-events/eventlog_v2_app-20250807052534-0000/: events_1_app-20250807052534-0000.zstd
spark&minio/spark-events/eventlog_v2_app-20250807063049-0001/: events_1_app-20250807063049-0001.zstd
