[project]
name = "BRS"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ivan Shebanov", email = "vanamokanov8@gmail.com"},
]
dependencies = ["boto3>=1.40.2", "python-dotenv>=1.1.1", "s3fs>=0.4.2", "pyarrow>=21.0.0", "pyspark>=4.0.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "ruff>=0.12.5",
    "kaggle>=1.7.4.5",
    "pandas>=2.3.1",
    "ipykernel>=6.30.1",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start =  { cmd = "python -m main", env = { PYTHONPATH = "brs" } }
download_dataset = { cmd = "python -m brs.ingestion.kaggle_download" }
csv2parquet = { cmd = "python -m brs.preprocessing.csv_to_parquet" }
test = "pytest"
ruff = "ruff check brs tests"
black = "black brs tests"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
